--- a/TestProject/templates/upload.html
+++ b/TestProject/templates/upload.html
@@ -2,74 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>MY ALLY TEST</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/style.css">
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9/brython.min.js"></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/brython@3.9/brython_stdlib.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script type="text/css">
-        .content {
-            margin-top: 56px;
-        }
-
-    </script>
-
+    <title>Upload</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 </head>
-<body onload="brython()">
+<body>
+<form id="upload-form" action="{{ url_for('upload') }}" method="POST" enctype="multipart/form-data">
 
-<nav class="navbar navbar-light bg-light">
-  <a class="navbar-brand" href="index.html">MY ALLY: Testing Assistive Features and Prognostication</a>
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="/upload.html">PDF READER</a>
-      </li>
-    </ul>
-</nav>
+    <input id="file-extension" type="file" name="file" accept="application/pdf" multiple>
+    <input type="submit" value="Upload">
+    <p id="msg"></p>
 
+</form>
 
-<div class="content">
-    <div class="container ">
-        <form class="was-validated">
+    {{ result }}
 
-            <div class="custom-file">
-                <input type="file" class="custom-file-input" id="validatedCustomFile" REQUIRED>
-                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
-                <div class="invalid-feedback">Upload your PDF File</div>
-            </div>
-
-        </form>
-
-        <h1 class="display-4">TXT FILE VIEW</h1>
-
-        <input type="file" id="upload-txt">
-        <br/>
-        <textarea id="txt" cols="136" rows="10"></textarea>
-    </div>
-
-</div>
-
-
-<!-- brython: assume it as an "input text" and convert it to speech-->
-
-    <!-- Load file data -->
-    <script type="text/python" id="script4">
-        from browser import document, window
-
-        def print_txt(e):
-            def onload(e):
-                document['txt'].value = e.target.result
-
-            file = document['upload-txt'].files[0]
-            reader = window.FileReader.new()
-            reader.readAsText(file)
-            reader.bind('load', onload)
-
-        document['upload-txt'].bind('input', print_txt)
-    </script>
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
+
+<!-- script to support only PDF file, matching extension .PDF-->
+<script>
+    $("#file-extension").change(function(){
+        var input = document.getElementById('file-extension');
+        for (var i=0; i<input.files.length; i++) {
+            var extension= input.files[i].name.substring(input.files[i].name.lastIndexOf('.')+1).toLowerCase()
+            if ((extension == 'pdf')) {
+                $("#msg").text("Your file is accepted! Now you can upload the file.")
+            }
+            else {
+                $("#msg").text("It is an invalid file. I can only read PDF files for now.")
+                document.getElementById("file-extension").value ="";
+            }
+        }
+    } );
+</script>
 </html>
